--- a/package.json
+++ b/package.json
@@ -1,14 +1,19 @@
+
 {
-  "name": "davina",
-  "version": "1.0.0",
+  "name": "nodejs-heroku",
+  "version": "16.15.1",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node index.js"
   },
+  "keywords": [],
   "author": "",
   "license": "ISC",
+  "engines": {
+    "node": "10.x"
+  },
   "dependencies": {
-    "express": "^4.18.1"
+    "express": "^4.17.1"
   }
 }
